# doppio

./: README.md  index.html  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/cert/: cert.pem  key.pem
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: api.rs  find.rs  mod.rs
src-tauri/src/server/handlers/static/: index.html  index.js  style.css
