[package]
name = "moi-mirror"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = {version = "4.3.1",  features = ["openssl"] }
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.0"
local-ip-address = "0.5.4"
openssl = {version = "0.10.56", features = ["vendored"] } 
actix-cors = "0.6.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
